appId: com.fibuladreams.atlas
---
- launchApp:
    clearState: true
- tapOn: "Start game"
- assertVisible: "Aarav"
- assertVisible: "Place input"
- tapOn: "Place input"
- eraseText
- inputText: "Andorra"
- tapOn: "Save"
- assertVisible: "Mia"
