appId: com.fibuladreams.atlas
---
- launchApp:
    clearState: true
- tapOn: "Start game"
- assertVisible: "Aarav"
- tapOn: "Place input"
- eraseText
- inputText: "Azzzzville"
- tapOn: "Save"
- assertVisible: "Request add"
- tapOn: "Request add"
- assertVisible: "Requested"
- launchApp:
    clearState: false
- assertVisible: "1 unread"
- tapOn: "Notifications"
- assertVisible: "Your place was rejected"
- assertVisible: "Azzzzville was rejected by the pipeline."
